<resources>
    <string name="app_name">COM594 CW 2018</string>
    <string name="txt_username">User Name</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="txtview_signup">Don\'t have an account?\n Register Here.</string>
    <string name="txt_r_username">User Name</string>
    <string name="txt_r_email">Email</string>
    <string name="txt_r_password">Password</string>
    <string name="btn_r_register">Register</string>
    <string name="txt_r_login">Already Registered? \n Login Here</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="city">%s</string>
    <string name="temp">%s</string>
    <string name="date">%s</string>
    <string name="pressure">%s</string>
    <string name="humidity">%s</string>
    <string name="speed">%s</string>
    <string name="enter_a_city">Enter a city</string>
    <string name="confirmPassword">Confirm Password</string>
</resources>
